Fix collapse to only overwrite padding on left and right.

--- a/core/grid/_grid-classes.scss
+++ b/core/grid/_grid-classes.scss
@@ -67,7 +67,8 @@
   }
 
   .collapse > & {
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -101,7 +102,8 @@
     }
   }
   .collapse & > {
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
